# zr_external_loader

./: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
boards/: nucleo_n657x0_q.overlay  stm32f746g_disco.overlay  stm32h735g_disco.overlay
doc/: Mbpoll.mbp
scripts/: delete_header.py  encrypt_otfdec.py
src/: button.rs  canbus.c  canbus.rs  ext_flash_loader.c  ext_flash_loader.h  lib.rs  modbus_slave.c  modbus_slave.rs  uart_bridge.rs
sysbuild/: mcuboot.conf  mcuboot.overlay
